# mcp_llm_cli

./: .mcp.json  README.md  pyproject.toml
.gemini/: settings.json
src/mcp_llm_server/: server.py
