[project]
name = "mcp-llm-server"
version = "0.1.0"
description = "MCP server for LLM prompts using claude and gemini-cli"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-llm-server = "mcp_llm_server.server:main"
